fix mobile spacing

--- a/scss/components/content.scss
+++ b/scss/components/content.scss
@@ -1,7 +1,7 @@
 @import "../values";
 
 #content {
-    padding: 20px;
+    padding: 30px 20px;
     background: lighten($surface, 2);
 }
 
